--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ aside {
   border-right: 1px solid;
   border-image: linear-gradient(#727275, #2c2c31);
 
-  background-image: url(./Group\ 6805.png);
+  background-image: url(./assets/Group\ 6805.png);
   background-position: top right;
   background-repeat: no-repeat;
   background-size: auto 100%;
