versão Final de teste

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ aside {
   border-image: linear-gradient(#727275, #2c2c31);
 
   background-image: url(./assets/Group\ 6805.png);
+  background-image: url(./assets/FundoRoxo.svg);
   background-position: top right;
   background-repeat: no-repeat;
   background-size: auto 100%;
